@@ -2,6 +2,8 @@ Revision history for Parse-ANSIColor-Tiny
 
 {{$NEXT}}
 
+  - Fix reset_foreground/reset_background to work with the 256 set of colors.
+
 0.601     2017-09-06T14:43:42Z
 
   - Update meta files.  No code changes.
